--- a/chassi.html
+++ b/chassi.html
@@ -29,7 +29,7 @@
       </div>
       <div>
         <aside>
-          <img src="img/CHASSI.jpg" alt="">
+          <img src="img/CHASSI.jpg" alt="chassi_1">
           <div>
           <p>Källor: <br>
             <a href="https://sv.wikipedia.org/wiki/Datorchassi" target="_blank">Wikipedia</a>
