--- a/cpu.html
+++ b/cpu.html
@@ -35,9 +35,9 @@
       </div>
       <div>
         <aside>
-          <img src="img/AMD_cpu.jpg" alt="" id="cpu_whitebg">
-          <img src="img/32bit.jpg" alt="">
-          <img src="img/16bit.jpg" alt="" id="cpu_whitebg">
+          <img src="img/AMD_cpu.jpg" alt="cpu_1" id="cpu_whitebg">
+          <img src="img/32bit.jpg" alt="cpu_2">
+          <img src="img/16bit.jpg" alt="cpu_3" id="cpu_whitebg">
           <div>
           <p>Källor: <br>
             <a href="https://sv.wikipedia.org/wiki/Processor" target="_blank">Wikipedia</a> <br>
