--- a/gpu.html
+++ b/gpu.html
@@ -33,7 +33,7 @@
           Om man då har som syfte att kunna spela spel som har hög grafik eller om man ska hålla på med 3D-bildbehandling eller redigera videos på ett smidigt sätt
           så krävs det att man har ett tillräckligt kraftfullt grafikkort. Videobuffertens, det tillfälliga minnets, storlek spelar även roll för ju mer komplicerade
           saker som ska visas på skärmen desto mer data behövs lagras på det tillfälliga minnet. Det är även viktigt att se till att grafikkortet är kompatibelt med det
-          moderkort man valt. Datorns video-uttag finns även på grafikkortet, så som HDMI, Display-port eller VGA, och är därför viktigt att ha koll på. <br> <br>
+          moderkort man valt. Den vanligaste anslutningen från grafikkortet är PCI-express, PCIe. Datorns video-uttag finns även på grafikkortet, så som HDMI, Display-port eller VGA, och är därför viktigt att ha koll på. <br> <br>
 
           De bästa grafikkkorten på marknaden idag är <i>AMD Radeon RX 5700</i> och <i>Nvidia GeForce RTX 2080 Ti.</i> AMD:s grafikkort kan kosta runt 4 300 kr och den har
           8GB minne, en Display-port och en HDMI utgång med stöd för 4K upplösning. Den är bäst för de flesta personerna. Om man istället vill ha den allra bästa grafikkortet
@@ -43,15 +43,16 @@
       </div>
       <div>
         <aside>
-          <img src="img/gpu.jpg" alt="">
-          <img src="img/gpu2.jpg" alt="" id="cpu_whitebg">
-          <img src="img/gpu3.jpg" alt="" id="cpu_whitebg">
+          <img src="img/gpu.jpg" alt="gpu_1">
+          <img src="img/gpu2.jpg" alt="gpu_2" id="cpu_whitebg">
+          <img src="img/gpu3.jpg" alt="gpu_3" id="cpu_whitebg">
           <div>
           <p>Källor: <br>
             <a href="https://sv.wikipedia.org/wiki/Grafikprocessor" target="_blank">Wikipedia - GPU</a> <br>
             <a href="https://sv.wikipedia.org/wiki/Grafikkort" target="_blank">Wikipedia - Grafikkort</a> <br>
             <a href="https://www.techradar.com/news/computing-components/graphics-cards/best-graphics-cards-1291458" target="_blank">Techradar</a> <br>
             <a href="https://pediaa.com/what-is-difference-between-gpu-and-graphic-card/" target="_blank">Pediaa</a> <br>
+            <a href="https://www.kjell.com/se/kunskap/hur-funkar-det/dator/datorns-huvudkomponenter/grafikkort" target="_blank">Kjell & Company</a>
           </p>
         </div>
         </aside>
