--- a/hårddisk.html
+++ b/hårddisk.html
@@ -2,7 +2,7 @@
 <html lang="sv" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Carls Hemsida</title>
+    <title>Datorns komponenter | LAGRING</title>
     <link rel="stylesheet" href="css/hårddisk.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/ttb.png">
@@ -59,13 +59,19 @@
           <br> <br>
           De externa lagringsenheterna ansluts med anslutningar så som USB och Thunderbolt.
         </p>
+        <h4>Slutsats</h4>
+        <p>
+          Man ska välja en HDD om man vill kunna lagra stora mängder data och inte är så noga om hur snabbt det tar att hämta respektive skriva datan till och från
+          lagringsenheten. Om du istället vill ha snabba skriv- och läs hastigheter, det vill säga att du kan hämta och kopiera data etc, så ska du skaffa en SSD. SSD kan dock ha
+          mindre kapacitet än en HDD.
+        </p>
       </div>
       <div>
         <aside>
-          <img src="img/seagate.jpg" alt="">
-          <img src="img/internal_ssd.jpg" alt="" id="cpu_whitebg">
-          <img src="img/external_hdd.jpg" alt="" id="cpu_whitebg">
-          <img src="img/external_ssd.jpg" alt="">
+          <img src="img/seagate.jpg" alt="hårddisk_1">
+          <img src="img/internal_ssd.jpg" alt="hårddisk_2" id="cpu_whitebg">
+          <img src="img/external_hdd.jpg" alt="hårddisk_3" id="cpu_whitebg">
+          <img src="img/external_ssd.jpg" alt="hårddisk_4">
           <div>
           <p>Källor: <br>
             <a href="https://sv.wikipedia.org/wiki/H%C3%A5rddisk" target="_blank">Wikipedia - Hårddisk</a> <br>
@@ -73,8 +79,9 @@
             <a href="https://tekhattan.com/blog/hardware/ssd-vs-hdd-speed-lifespan-and-reliability/" target="_blank">Tekhattan</a> <br>
             <a href="https://www.clasohlson.com/se/Extern-h&aring;rddisk,-Seagate-Backup-Plus-Slim/p/38-8901" target="_blank">Clas Ohlson</a> <br>
             <a href="https://www.netonnet.se/art/datorkomponenter/harddisk/sata-35-tum/seagate-barracuda-2tb-256mb-cache/1004738.8991/?gclid=EAIaIQobChMI7Nvsi9mV6QIVl4KyCh0dcAgzEAQYASABEgJQXfD_BwE" target="_blank">Netonnet - Seagate</a> <br>
-            <a href="https://www.netonnet.se/art/datorkomponenter/harddisk/ssdm2/samsung-970-evo-nvme-m-2-ssd-500gb/1003767.8994/?gclid=EAIaIQobChMIv-OJmNqV6QIVRMwYCh1ZjwvrEAQYBCABEgKSn_D_BwE" target="_blank">Netonnet - Samsung EVO</a>
-            <a href="https://www.netonnet.se/art/dator-surfplatta/datortillbehor/lagring/extern-ssd-harddisk/samsung-t5-external-ssd-500gb/248956.14090/?gclid=EAIaIQobChMIuevn99qV6QIVC8KyCh1P9A0KEAQYASABEgKaNPD_BwE" target="_blank">Netonnet - Samsung T5</a>
+            <a href="https://www.netonnet.se/art/datorkomponenter/harddisk/ssdm2/samsung-970-evo-nvme-m-2-ssd-500gb/1003767.8994/?gclid=EAIaIQobChMIv-OJmNqV6QIVRMwYCh1ZjwvrEAQYBCABEgKSn_D_BwE" target="_blank">Netonnet - Samsung EVO</a> <br>
+            <a href="https://www.netonnet.se/art/dator-surfplatta/datortillbehor/lagring/extern-ssd-harddisk/samsung-t5-external-ssd-500gb/248956.14090/?gclid=EAIaIQobChMIuevn99qV6QIVC8KyCh1P9A0KEAQYASABEgKaNPD_BwE" target="_blank">Netonnet - Samsung T5</a> <br>
+            <a href="https://www.kjell.com/se/kunskap/hur-funkar-det/dator/lagringsmedia/harddiskar-och-ssd-diskar" target="_blank">Kjell & Company</a>
           </p>
         </div>
         </aside>
