--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
       </nav>
     </header>
     <main>
-      <h1>Datorns delar</h1>
+      <h1>Datorns olika komponenter</h1>
       <p>
-        På denna hemsida kommer det finnas information och fakta om datorns
-        olika komponenter och om hur datorn är uppbyggd. <br> <br>
+        Ska du köpa din första dator? <br> <br>
+        På denna hemsida finner du all information om datorns olika komponenter du behöver för att du ska få en bättre inblick om vad alla komponenterna gör.
+        Det kommer stå om vad de har som uppgift, hur de fungerar och ett par rekommendationer för respektive komponent.<br> <br>
         I menyn upp till höger hittar du datorns olika komponenter.
       </p>
     </main>
