--- a/moderkort.html
+++ b/moderkort.html
@@ -2,10 +2,11 @@
 <html lang="sv" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Carls Hemsida</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Datorns komponenter | MODERKORT</title>
     <link rel="stylesheet" href="css/moderkort.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/poop_emoji.png">
+    <link rel="shortcut icon" href="img/ttb.png">
   </head>
   <body>
     <header>
@@ -15,13 +16,37 @@
       </nav>
     </header>
     <main>
-      <h1>Moderkort</h1>
-      <p>
-        Moderkortet är där allt skit finns på datorn. FORMFAKTOR. PCI Express
-      </p>
+      <div class="main_text">
+        <h1>MODERKORT</h1>
+        <p>
+          Moderkortet är det centrala kretskortet i en dator, därav fått sitt namn. På moderkortet monterar man mindre kretskort och liknande enheter
+          så som ram-minnet och CPU:n och dess uppgift är alltså att binda samman alla komponenter. Det finns ett antal anslutningar på moderkortet och det är i dessa man
+          sätter bland annat i ram-stickan och GPU:n men samt kablar till nätaggregatet och RGB-lampor om man har det. <br> <br>
+          Det finns ett antal formfaktorer för moderkortet och det allra vanligaste idag är ATX (Advanced Technology Extended). Denna formfaktor definierar hur
+          de olika anslutningarna på moderkortet ska se ut men även måttena och skruvhålena. Därför att viktigt att se till att dessa hål på moderkortet man
+          valt passar med de tänkta infästningarna i chassit man valt. <br> <br>
+          Anslutningarna för processorerna på moderkortet kallas för <i>socklar</i>. Dessa socklar kan variera beroende på tillverkare och generation för tänkta processorer.
+          Därför är det mycket viktigt att se till att CPU:n man valt passar med sockeln på moderkortet man valt. Anslutningen för en processor från AMD har allstå inte samma
+          anslutning som en processor från Intel. Olika generationer av processorer från samma tillverkare har inte heller samma anslutningar. <br> <br>
+          Då det finns ett begränsat antal anslutningar, portat och så kallade kortplatser för till exempel grafikkort, ljudkort och nätverkskort så är det därför viktigt att se till att
+          moderkortet man valt har det antal anslutningar du behöver för dina behov. Moderna moderkort har nästan alltid inbyggda nätverks- och ljudkort på kortet.
+        </p>
+      </div>
+      <div>
+        <aside>
+          <img src="img/moderkort1.jpg" alt="moderkort_1">
+          <img src="img/moderkort2.jpg" alt="moderkort_2" id="cpu_whitebg">
+          <img src="img/moderkort3.jpg" alt="moderkort_3">
+          <div>
+          <p>Källor: <br>
+            <a href="https://sv.wikipedia.org/wiki/Moderkort" target="_blank">Wikipedia</a> <br>
+          </p>
+        </div>
+        </aside>
+      </div>
     </main>
     <footer>
-      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
+      <p>Designad av ©Kajolpro | <a href="kontakta.html">Kontakta</a></p>
     </footer>
   </body>
 </html>
