--- a/kontakta.html
+++ b/kontakta.html
@@ -2,37 +2,28 @@
 <html lang="sv" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Carls Hemsida</title>
+    <title>Datorns komponenter | KONTAKTA</title>
     <link rel="stylesheet" href="css/kontakta.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/poop_emoji.png">
+    <link rel="shortcut icon" href="img/ttb.png">
   </head>
   <body>
     <header>
       <nav>
-          <div id="home_button"><a href="index.html">HEM</a></div>
-          <div id="meny_button"><a href="meny.html">MENY</a></div>
+        <div id="home_button"><a href="index.html">HEM</a></div>
+        <div id="meny_button"><a href="meny.html">MENY</a></div>
       </nav>
     </header>
     <main>
-      <h1>Kontakt uppgifter</h1>
-      <div class="wrapper">
-        <div class="om_text">
-          <h3>Om:</h3>
-          <p>
-            Mitt namn är Carl och du hittar mina social medier och min e-mail adress <br>
-            här intill :)
-          </p>
-        </div>
-        <br>
+      <div class="main_text">
+        <h1>Kontakt uppgifter:</h1>
+        <p> <a href="Snapcode.png">Snapchat:</a> kajol53 </p>
+        <p> <a href="https://www.instagram.com/tostleblogger/?hl=sv">Instagram: </a>tostleblogger </p>
+        <p> <a href="mailto:carjoh14@kfvelev.se">Email:</a> carjoh14@kfvelev.se </p>
+      </div>
+      <div>
         <aside>
-          <img src="img/snapcode.png" alt="picture">
-          <div>
-            <h3>Sociala Medier:</h3>
-            <p><a href="https://www.instagram.com/tostleblogger/?hl=sv">Instagram:</a> tostleblogger</p>
-            <p><a href="img/snapcode.png">Snapchat:</a> kajol53</p>
-            <p>Email-adress: <br> <a href="mailto:carjoh14@kfvelev.se">carjoh14@kfvelev.se</a> </p>
-          </div>
+          <img src="img/Snapcode.png" alt="">
         </aside>
       </div>
     </main>
