--- a/nätaggregat.html
+++ b/nätaggregat.html
@@ -2,10 +2,11 @@
 <html lang="sv" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Carls Hemsida</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Datorns komponenter | NÄTAGGREGAT</title>
     <link rel="stylesheet" href="css/nätaggregat.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/poop_emoji.png">
+    <link rel="shortcut icon" href="img/ttb.png">
   </head>
   <body>
     <header>
@@ -15,13 +16,32 @@
       </nav>
     </header>
     <main>
-      <h1>Nätaggregat</h1>
-      <p>
-        Ström
-      </p>
+      <div class="main_text">
+        <h1>NÄTAGGREGAT</h1>
+        <p>
+          Nätaggregatet i en dator är den enhet som försörjer hela systemet med elektricitet. Den omvandlar växelströmmen i vägguttaget till likström och till de olika formerna
+          av elektricitet som de olika komponenterna behöver, alltså till rätt spänning, ström och frekvens. Ram-minnet behöver inte lika mycket ström som till exempel GPU:n. <br> <br>
+          Nätaggregat i en person dator ser oftast ut som en låda och är oftast monterad längst ned i ett chassi. Eftersom nätaggregatet försörjer hela systemet med elektrictet
+          kan det även bli mycket varmt och behövs kyla ned. Det kyls antingen ned passivt eller med en fläkt, som är vanligast i en persondator. Då den försörjer hela systemet med elektricitet
+          är det även viktigt att man skaffar ett nätaggregat som kan tillföra tillräckligt mycket elektricitet till systemet. <br> <br>
+          Nätaggregat har även formafaktorer som moderkortet. Den vanligaste formfaktorn för nätaggregat idag är ATX. Därför är det även viktigt att se till att man skaffar rätt nätaggregat till det
+          moderkort man valt då kabeln kopplas in i moderkortet.
+        </p>
+      </div>
+      <div>
+        <aside>
+          <img src="img/nätaggregat1.jpg" alt="nätaggregat_1">
+          <img src="img/nätaggregat2.jpg" alt="nätaggregat_2">
+          <div>
+          <p>Källor: <br>
+            <a href="https://sv.wikipedia.org/wiki/N%C3%A4taggregat" target="_blank">Wikipedia</a> <br>
+          </p>
+        </div>
+        </aside>
+      </div>
     </main>
     <footer>
-      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
+      <p>Designad av ©Kajolpro | <a href="kontakta.html">Kontakta</a></p>
     </footer>
   </body>
 </html>
