--- a/ram.html
+++ b/ram.html
@@ -2,10 +2,11 @@
 <html lang="sv" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Carls Hemsida</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Datorns komponenter | RAM-minne</title>
     <link rel="stylesheet" href="css/ram.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/poop_emoji.png">
+    <link rel="shortcut icon" href="img/ttb.png">
   </head>
   <body>
     <header>
@@ -15,13 +16,41 @@
       </nav>
     </header>
     <main>
-      <h1>RAM -minne</h1>
-      <p>
-        RAM-minne, eller Random Access Memory som det egentligen heter är mycket bra.
-      </p>
+      <div class="main_text">
+        <h1>RAM-minne</h1>
+        <p>
+          RAM står för engelskans "Random Acces Memory" och lagra data prescis som alla andra lagrinsenheter; hårddiskar, grafikminne, casheminne och flashminne.
+          Processorn arbetar mycket snabbt med data och behöver därför ett snabbt minne det kan jobba med. Om processorn istället skulle använda det sekundära lagringsmediumet
+          så skulle det sjunka datorns prestanda då den sekundära lagringsenheten är långsammare i jämförelse med RAM-minnet. I RAM-minnet lagras data som processor använder för
+          stunden eller ska använda inom kort och den datan kan vara vad som helst. Från operativsystemets startrutiner till data ett program använder, därav fått sin namn. <br> <br>
+          När viss data ska användas hämtas det från till exempel hårddisken och lagras på RAM-minnet och blir på så sätt lättåtkomliga för processorn. Nör operativsystem ska
+          starta ett program så lagras dess information på RAM-minnet och eventuella dokument som det programmet öppnar. När programmet avslutas rensas datan från RAM-minnets
+          så att ny data kan lagras där. <br> <br>
+          Om man till exempel vill ha flera program igång samtidigt eller något så enkelt som att flera flikar i Google utan att datorn saktas ned så behöver
+          man ha mycket RAM-minne. För ju större RAM-minne man har desto mer information kan lagras temporärt med snabb åtkomst, alltså kan fler program köras med bibehållen prestanda. <br> <br>
+          RAM-minnen kommer i olika storlekar och det är därför viktigt att se till att man skaffar ett RAM-minne som ens fysiskt får plats på moderkortet du valt. På vissa moderkort finns det möjlighet
+          att ha fler än en RAM-sticka. Det
+          finns även olika generationer av RAM-minnen. De senaste är så klart snabbare än de allra första, dock så tar de snabbare RAM-minnena upp mer yta än de långsammare.
+          Det första RAM-minnet med en 184 pin anslutning har en maxhastighet på 3 200 MB/s medan det snabbaste, DDR4, har en hastighet på 28 800 MB/s och har en 288 pin anslutning. <br> <br>
+          Det bästa RAM-minnet är från Corsair, vars namn är <i>Corsair Vengeance LED</i>, och man kan få två stycken 8GB RAM-stickor för runt 1 700kr.
+        </p>
+      </div>
+      <div>
+        <aside>
+          <img src="img/ram1.jpg" alt="ram_1" id="cpu_whitebg">
+          <img src="img/ram2.jpg" alt="ram_2">
+          <img src="img/ram3.jpg" alt="ram_3" id="cpu_whitebg">
+          <div>
+          <p>Källor: <br>
+            <a href="https://en.wikipedia.org/wiki/Random-access_memory" target="_blank">Wikipedia</a> <br>
+            <a href="https://www.techradar.com/news/best-ram" target="_blank">Techradar</a>
+          </p>
+        </div>
+        </aside>
+      </div>
     </main>
     <footer>
-      <p>Designad av ©Milliefacts | <a href="kontakta.html">Kontakta</a></p>
+      <p>Designad av ©Kajolpro | <a href="kontakta.html">Kontakta</a></p>
     </footer>
   </body>
 </html>
